--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -227,14 +227,15 @@
                 <label for="radio-23" class="radio-custom-label">Script</label>
               </div>
             </div>
-            <div class="conditions-input-sec" *ngFor="let basic of selectedStage.condition.mappings;let i=index;" [hidden]="selectedStage.condition.type=='script'">
+            <div class="conditions-input-sec" *ngFor="let basic of selectedStage.condition.mappings;let i=index;"
+              [hidden]="selectedStage.condition.type=='script'">
               <div class="conditions-types">
                 <div class="and-seperator" *ngIf="selectedStage.condition.mappings.length>1&&i>0">And</div>
                 <div class="kr-sg-input-text col-8">
                   <div class="position-relative">
-                    <input type="text" placeholder="Enter Field" maxlength="60" (keyup)="changesDetected = true"
-                      class="input-text dropdown-toggle dropdown-input" data-toggle="dropdown"
-                      [(ngModel)]="basic.fieldName" />
+                    <input type="text" placeholder="Enter the field name here" maxlength="60"
+                      (keyup)="changesDetected = true" class="input-text dropdown-toggle dropdown-input"
+                      data-toggle="dropdown" [(ngModel)]="basic.fieldName" />
                     <ul class="source-field-dropdown dropdown-menu content-menu" id="fields-search-with-dropdown-menu"
                       [ngClass]="{'no-data-match-border-0':!(fields | filter : [basic.source_field, 'fieldName']).length}">
                       <perfect-scrollbar class="scroll-search-field">
@@ -248,8 +249,8 @@
                 </div>
                 <div class="kr-sg-dropdowns col-4">
                   <div class="dropdown dropdown-open">
-                    <button class="dropdown-toggle dropdown-input"
-                      data-toggle="dropdown">{{basic.operator==''?'Operator':basic.operator}}</button>
+                    <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{basic.operator==''?'Select
+                      Operator':basic.operator}}</button>
                     <ul class="dropdown-menu content-menu">
                       <li *ngFor="let operator of operators"
                         (click)="basic.operator=operator.value;addCondition('update',i,'operator',basic.operator);">
