api integration done in advance results

--- a/findly-builder/src/app/components/result-templates/result-templates.component.scss
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.scss
@@ -2152,11 +2152,7 @@ padding: 10px 20px 10px 20px;
                         }
                         input {
                             padding-left: 10px;
-                        }
-                        input.input-search.err-block{
-                            background-color: rgb(255, 255, 255);
-                            border-color: rgb(221, 54, 70);
-                        }
+                        }                      
                     }
                 }
                 .valuse-available-fileds{
@@ -2319,6 +2315,12 @@ padding: 10px 20px 10px 20px;
                                         }
                                     }
                                     .kr-sg-dropdowns {
+                                        .kr-sg-input-search{
+                                            input.input-search.err-block{
+                                                background-color: rgb(255, 255, 255);
+                                                border-color: rgb(221, 54, 70);
+                                            }
+                                           }
                                         .search-with-dropdown {
                                             position: absolute;
                                             border: 0;
