--- a/findly-builder/src/app/components/result-templates/result-templates.component.html
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.html
@@ -1805,6 +1805,7 @@
                   </ng-container>
 
                 </div>
+
                 <div class="kr-sg-checkbox mb-2">
                   <input id="checkbox-addToTitle" class="checkbox-custom" type="checkbox" (change)="renderTitleChange()"
                     [checked]="templateDataBind.layout.renderTitle">
@@ -1860,6 +1861,7 @@
                         <!-- <input type="text"  maxlength="60" placeholder="Search For Field" id="facets-search-input" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!addEditFacetObj.fieldId.length) && submitted)" data-toggle="dropdown" (keyup)="getFieldAutoComplete(addEditFacetObj.fieldName)" [(ngModel)]="addEditFacetObj.fieldName"> -->
                         <input type="text" maxlength="60" placeholder="Search Field" id="facets-search-input"
                           class="input-search dropdown-toggle dropdown-input" data-toggle="dropdown" autocomplete="off"
+                          [class.err-block]="(!(preview_desc?.length) && submitted)"
                           (keyup)="searchlist('description',$event.target.value,fieldData)"
                           (focus)="searchlist('description',$event.target.value,fieldData)" [(ngModel)]="preview_desc">
                         <ul class="dropdown-menu content-menu" id="facets-search-with-dropdown-menu">
@@ -1886,6 +1888,7 @@
                         <!-- <input type="text"  maxlength="60" placeholder="Search For Field" id="facets-search-input" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!addEditFacetObj.fieldId.length) && submitted)" data-toggle="dropdown" (keyup)="getFieldAutoComplete(addEditFacetObj.fieldName)" [(ngModel)]="addEditFacetObj.fieldName"> -->
                         <input type="text" maxlength="60" placeholder="Search Field" id="facets-search-input"
                           class="input-search dropdown-toggle dropdown-input" data-toggle="dropdown" autocomplete="off"
+                          [class.err-block]="(!(preview_img?.length) && submitted)"
                           (keyup)="searchlist('image',$event.target.value,fieldData)"
                           (focus)="searchlist('image',$event.target.value,fieldData)" [(ngModel)]="preview_img">
                         <ul class="dropdown-menu content-menu" id="facets-search-with-dropdown-menu">
