--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -300,7 +300,7 @@
                         <ng-container *ngIf="!fileObj.fileName">
                           <input type="file" id="sourceFileUploader" class="custom-file-input "
                             (change)="fileChangeListener($event)" aria-describedby="inputGroupFileAddon01"
-                            accept=".csv,.pdf,.json,.doc,.ppt,.xlsx,.txt,.docx">
+                            accept=".csv,.pdf,.json,.doc,.ppt,.xlsx,.txt,.docx" multiple>
                           <div class="imageDiv">
                             <img src="assets/images/source-icos/drog_frop.svg">
                           </div>
