--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -31,6 +31,14 @@
     .logoKoreIcon {
         outline: none;
         cursor: pointer;
+        &.landing-screen{
+            width: 141px;
+            height: 40px;
+        }
+        &.no-landing-screen{
+            height: 22px;
+            width: 22px;
+        }
     }
     &.onboarding-header {
         box-shadow: none;
