FLY-3411 FLY-3381 FLY-3369 issues fixed

--- a/findly-builder/src/app/components/usage-log/usage-log.component.scss
+++ b/findly-builder/src/app/components/usage-log/usage-log.component.scss
@@ -152,9 +152,9 @@
                 color: #202124;   
                 cursor: default;
                 word-break: break-word;
-                img{
-                    cursor: pointer;
-                } 
+                // img{
+                //     cursor: pointer;
+                // } 
             }
             .search-query-data{
                 display: flex;
