--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -368,6 +368,16 @@
         }
         .condition-block{
           margin: 20px 0 8px 0;
+          button{
+            img{
+              height: 11px;;
+              margin-right: 5px;
+              margin-top: -5px;
+            }
+            span{
+              font-size: 14px;
+            }
+          }
           .clear{
             text-align: right;
             color: #0D6EFD;
