--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -411,7 +411,7 @@
                 <div class="drag-drop-sec">
                   <input type="file" id="sourceFileUploader" class="custom-file-input"
                     (change)="fileChangeListener($event)" aria-describedby="inputGroupFileAddon01"
-                    accept=".csv,.pdf,.json">
+                    accept=".csv,.pdf,.json" multiple>
                   <div _ngcontent-gpv-c11="" class="imageDiv">
                     <img _ngcontent-gpv-c11="" src="assets/images/source-icos/drog_frop.svg">
                   </div>
