FLY-3373, FLY-3283 issues fixed

--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -865,7 +865,7 @@
                             </span>
                           </div>
                         </div>
-                          <input type="number" autocomplete="off" id="maxUrlLimit" maxlength="60" name="maxUrlLimit"
+                        <input type="number" autocomplete="off" id="maxUrlLimit" maxlength="60" name="maxUrlLimit"
                           placeholder="500" (keyup)="checkValue(maxUrlLimit,'maxUrlLimit')" [(ngModel)]="maxUrlLimit"
                           class="input-text maxUrlLimit-class">
                       </div>
@@ -1000,10 +1000,9 @@
               </div>
             </perfect-scrollbar>
             <!-- Conf Configuration-->
-            
+
           </div>
-          <div class="accordion-content-info text-left"
-            *ngIf="page && totalRecord > 0">
+          <div class="accordion-content-info text-left" *ngIf="page && totalRecord > 0">
             <div class="header-sec row m-0">
               <div class="col-8 label_text m-0 p-0">Pages</div>
               <div class="col-3 label_text m-0">Last Updated <img src="assets/icons/caretDown.svg" class="ml-1"></div>
@@ -1090,8 +1089,7 @@
             </div>
 
           </div>
-          <div class="empty-page-data-container"
-            *ngIf="page &&  totalRecord == 0">
+          <div class="empty-page-data-container" *ngIf="page &&  totalRecord == 0">
             <img src="assets\images\emptyList.png">
             <div class="title">Sorry! No Pages available yet!! Please <span> crawl</span> the web domain again</div>
           </div>
